<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_time_picker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coachme.coachmeforusers.activities.reservations.ReservationTimePickerActivity">

    <Button
        android:id="@+id/timePickerPlusButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:background="@drawable/buttonshape"
        android:text="@string/timepickerplus_button_text"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/timePickerLessButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/timePickerPlusButton"
        android:layout_centerVertical="true"
        android:background="@drawable/buttonshape"
        android:text="@string/timepickerless_button_text"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/timePickerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePickerPlusButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/time_picker_text_text_size" />

    <Button
        android:id="@+id/startTrainingButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:background="@drawable/buttonshape"
        android:text="@string/starttraining_button_text"
        android:textColor="#FFFFFF" />

</RelativeLayout>
