<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_after_reservation_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coachme.coachmeforusers.activities.reservations.AfterReservationMenuActivity">

    <TextView
        android:id="@+id/machinesSuggestedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/machinessuggested_textview_text"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/machinesByTypesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="#FFFFFF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/goToMachinesListButton"
        android:layout_alignEnd="@+id/goToMachinesListButton"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:id="@+id/machinesByTypesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="182dp"
        android:background="@drawable/buttonshape"
        android:text="@string/logoutbutton_text"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/goToMachinesListButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logOutButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:background="@drawable/buttonshape"
        android:text="@string/gotomachineslist_button_text"
        android:textColor="#FFFFFF" />
</RelativeLayout>
